{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 177,
  "lineage": "7069a847-9f32-98f5-f6aa-7bb7c0059268",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "store_default_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049888069:security-group/sg-0c748ed485489c5fa",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0c748ed485489c5fa",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "975049888069",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Store_App"
            },
            "tags_all": {
              "Name": "Store_App"
            },
            "vpc_id": "vpc-003462e88d01ae6d9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.store_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "store_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:975049888069:instance/i-0adb59b6a1649d8c2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0adb59b6a1649d8c2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02b840987ac6c9b36",
            "private_dns": "ip-10-0-1-28.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08fc75eb080b57b79",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ee4b956b9df42336",
            "tags": {
              "Name": "Store_App"
            },
            "tags_all": {
              "Name": "Store_App"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c748ed485489c5fa"
            ]
          },
          "dependencies": [
            "aws_subnet.store_subnet-1",
            "aws_vpc.store_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "store_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049888069:internet-gateway/igw-0a7d51c0917a8f895",
            "id": "igw-0a7d51c0917a8f895",
            "owner_id": "975049888069",
            "tags": {
              "Name": "Store_App"
            },
            "tags_all": {
              "Name": "Store_App"
            },
            "vpc_id": "vpc-003462e88d01ae6d9"
          },
          "dependencies": [
            "aws_vpc.store_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "store_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049888069:route-table/rtb-00f20943a657eded1",
            "id": "rtb-00f20943a657eded1",
            "owner_id": "975049888069",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a7d51c0917a8f895",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Store_App"
            },
            "tags_all": {
              "Name": "Store_App"
            },
            "timeouts": null,
            "vpc_id": "vpc-003462e88d01ae6d9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.store_igw",
            "aws_vpc.store_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "store_route_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f7fbbe77a7937eb",
            "route_table_id": "rtb-00f20943a657eded1",
            "subnet_id": "subnet-0ee4b956b9df42336"
          },
          "dependencies": [
            "aws_internet_gateway.store_igw",
            "aws_route_table.store_route_table",
            "aws_subnet.store_subnet-1",
            "aws_vpc.store_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "store_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049888069:security-group/sg-0fa0e98697fa83e0e",
            "description": "Allow TLS inbound traffic and all outbound traffic for monitoring",
            "egress": [],
            "id": "sg-0fa0e98697fa83e0e",
            "ingress": [],
            "name": "store_sg",
            "name_prefix": "",
            "owner_id": "975049888069",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Store_App_Monitoring"
            },
            "tags_all": {
              "Name": "Store_App_Monitoring"
            },
            "timeouts": null,
            "vpc_id": "vpc-003462e88d01ae6d9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.store_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "store_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049888069:subnet/subnet-0ee4b956b9df42336",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee4b956b9df42336",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975049888069",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Store_App"
            },
            "tags_all": {
              "Name": "Store_App"
            },
            "vpc_id": "vpc-003462e88d01ae6d9"
          },
          "dependencies": [
            "aws_vpc.store_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "store_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049888069:vpc/vpc-003462e88d01ae6d9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f88b67d2950c8109",
            "default_route_table_id": "rtb-0d987ad1e83969ffb",
            "default_security_group_id": "sg-0c748ed485489c5fa",
            "dhcp_options_id": "dopt-0c1fe7db5d7484f10",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-003462e88d01ae6d9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d987ad1e83969ffb",
            "owner_id": "975049888069",
            "tags": {
              "Name": "Store_App"
            },
            "tags_all": {
              "Name": "Store_App"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049888069:security-group-rule/sgr-0a6f35b4b62efeaf8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0a6f35b4b62efeaf8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c748ed485489c5fa",
            "security_group_rule_id": "sgr-0a6f35b4b62efeaf8",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.store_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049888069:security-group-rule/sgr-0848d6a3c447c83e1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0848d6a3c447c83e1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c748ed485489c5fa",
            "security_group_rule_id": "sgr-0848d6a3c447c83e1",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.store_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_port_3002",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049888069:security-group-rule/sgr-01eaa40cd8d08d99d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3002,
            "id": "sgr-01eaa40cd8d08d99d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c748ed485489c5fa",
            "security_group_rule_id": "sgr-01eaa40cd8d08d99d",
            "tags": null,
            "tags_all": {},
            "to_port": 3002
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.store_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_port_4000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049888069:security-group-rule/sgr-067a60145c70b399c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 4000,
            "id": "sgr-067a60145c70b399c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c748ed485489c5fa",
            "security_group_rule_id": "sgr-067a60145c70b399c",
            "tags": null,
            "tags_all": {},
            "to_port": 4000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.store_vpc"
          ]
        }
      ]
    }
  ]
}